# staff-request-bot

./: Cargo.toml  LICENSE.txt  README.md
src/: bot.rs  config.rs  db.rs  main.rs
