[package]
name = "staff-request-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"]}
serde_yaml = "0.8"
serenity = { version = "0.10", features = ["collector"]}
tokio = { version = "1.15.0", features = ["full"] }
mongodb = {version = "2.1.0", default-features = false, features = ["snappy-compression", "zstd-compression", "zlib-compression", "tokio-runtime"]}
